--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node devserver.js",
     "build": "rimraf ./dist && webpack --config webpack.config.production.js",
     "preview": "http-server ./dist -p 1234 -c-1",
+    "server": "http-server ./dist -p $PORT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,9 +21,15 @@
   "author": "Tomas Holas",
   "license": "no-license",
   "devDependencies": {
-    "autoprefixer": "^6.5.0",
-    "babel-core": "^6.17.0",
+    "webpack-dev-server": "^2.1.0-beta.8",
     "babel-eslint": "^7.1.0",
+    "eslint": "^3.9.0",
+    "eslint-plugin-react": "^6.4.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.5.0",
+    "axios": "^0.15.0",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -31,34 +38,29 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.25.0",
-    "eslint": "^3.9.0",
-    "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "faker": "^3.1.0",
     "html-webpack-plugin": "^2.22.0",
+    "http-server": "^0.9.0",
     "image-webpack-loader": "^2.0.0",
+    "mobx": "^2.5.2",
+    "mobx-react": "^3.5.7",
+    "mobx-react-devtools": "^4.2.6",
+    "moment": "^2.15.1",
     "node-sass": "^3.10.1",
+    "package": "^1.0.1",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-router": "^4.0.0-alpha.4",
     "react-router-loader": "^0.5.4",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.8"
-  },
-  "dependencies": {
-    "axios": "^0.15.0",
-    "faker": "^3.1.0",
-    "mobx": "^2.5.2",
-    "mobx-react": "^3.5.7",
-    "mobx-react-devtools": "^4.2.6",
-    "moment": "^2.15.1",
-    "package": "^1.0.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^4.0.0-alpha.4",
     "whatwg-fetch": "^1.0.0"
   },
   "repository": {
