--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "webpack-dev-server": "^2.1.0-beta.8",
     "babel-eslint": "^7.1.0",
     "eslint": "^3.9.0",
-    "eslint-plugin-react": "^6.4.1"
+    "eslint-plugin-react": "^6.4.1",
+    "react-hot-loader": "^3.0.0-beta.2"
   },
   "dependencies": {
     "autoprefixer": "^6.5.0",
@@ -58,7 +59,6 @@
     "precss": "^1.4.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.2",
     "react-modal": "^1.5.2",
     "react-router": "^4.0.0-alpha.4",
     "react-router-loader": "^0.5.4",
@@ -70,7 +70,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "engines": {
-    "node": "~6.3.1",
+    "node": "~6.9.1",
     "npm": "~3.10.8"
   }
 }
