--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-modal": "^1.5.2",
     "react-router": "^4.0.0-alpha.4",
     "react-router-loader": "^0.5.4",
     "resolve-url-loader": "^1.6.0",
